# blank

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _build.py  build.bat  build.sh  conanfile.txt
CMake/: parse.cmake  repositories.cmake
configuration/: build.py  download_prerequisites.py  mac_install_ requirements.sh  utils.py
configuration/download_prerequisites/: other_os.py  windows.bat
configuration/download_prerequisites/conan_fixed_os_x/: default  fix.py  settings.yml
src/: main.cpp
